# node

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  deny.toml
client/rpc-v2/: Cargo.toml
client/rpc-v2/src/: lib.rs
client/rpc-v2/src/orbinum/: ORBINUM_RPC_API.md  mod.rs
client/rpc-v2/src/orbinum/application/: mod.rs
client/rpc-v2/src/orbinum/domain/: mod.rs
client/rpc-v2/src/orbinum/infrastructure/: mod.rs
client/rpc-v2/src/orbinum/presentation/: api.rs  mod.rs  server.rs
frame/account-mapping/: Cargo.toml
frame/account-mapping/rpc/: Cargo.toml
frame/account-mapping/rpc/src/: error.rs  lib.rs
frame/account-mapping/runtime-api/: Cargo.toml
frame/account-mapping/runtime-api/src/: lib.rs
frame/account-mapping/src/: benchmarking.rs  lib.rs  mock.rs  ports.rs  runtime_api_impl.rs  types.rs  utils.rs  weights.rs
frame/account-mapping/src/tests/: alias.rs  alias_sale.rs  chain_links.rs  evm_mapping.rs  mod.rs  private_dispatch.rs  private_links.rs
frame/evm/precompile/account-mapping/: Cargo.toml
frame/evm/precompile/account-mapping/src/: lib.rs
frame/shielded-pool/: Cargo.toml  README.md
frame/shielded-pool/rpc/: Cargo.toml
frame/shielded-pool/rpc/src/: lib.rs
frame/shielded-pool/runtime-api/: Cargo.toml
frame/shielded-pool/runtime-api/src/: lib.rs
frame/shielded-pool/src/: benchmarking.rs  lib.rs  mock.rs  runtime_api_impl.rs  weights.rs
frame/shielded-pool/src/application/: mod.rs
frame/shielded-pool/src/application/dto/: deposit_dto.rs  mod.rs
frame/shielded-pool/src/application/services/: asset_service.rs  disclosure_service.rs  mod.rs  shield_service.rs  transfer_service.rs  unshield_service.rs
frame/shielded-pool/src/application/use_cases/: asset_management.rs  disclosure.rs  mod.rs  private_transfer.rs  shield.rs  unshield.rs
frame/shielded-pool/src/domain/: errors.rs  mod.rs
frame/shielded-pool/src/domain/entities/: asset_metadata.rs  commitment.rs  mod.rs  note.rs  nullifier.rs
frame/shielded-pool/src/domain/value_objects/: asset_id.rs  encrypted_memo.rs  hash.rs  merkle_path.rs  mod.rs
frame/shielded-pool/src/infrastructure/: frame_types.rs  genesis.rs  merkle_tree.rs  mod.rs
frame/shielded-pool/src/infrastructure/repositories/: asset_repository.rs  audit_repository.rs  commitment_repository.rs  merkle_repository.rs  mod.rs  nullifier_repository.rs  pool_balance_repository.rs
frame/shielded-pool/src/infrastructure/services/: disclosure_validation_service.rs  merkle_tree_service.rs  mod.rs
frame/shielded-pool/src/tests/: mod.rs
frame/shielded-pool/src/tests/helpers/: mod.rs
frame/shielded-pool/src/tests/integration/: audit_tests.rs  invalid_proof_tests.rs  multi_asset_tests.rs  private_transfer_tests.rs  shield_batch_tests.rs  shield_tests.rs  unshield_tests.rs
frame/signature-api/: Cargo.toml
frame/signature-api/src/: lib.rs
frame/zk-verifier/: Cargo.toml  README.md
frame/zk-verifier/benches/: README.md  config.rs  groth16_verify.rs  run.sh
frame/zk-verifier/rpc/: Cargo.toml
frame/zk-verifier/rpc/src/: lib.rs
frame/zk-verifier/runtime-api/: Cargo.toml
frame/zk-verifier/runtime-api/src/: lib.rs
frame/zk-verifier/src/: benchmarking.rs  lib.rs  mock.rs  types.rs  weights.rs
frame/zk-verifier/src/application/: commands.rs  errors.rs  mod.rs
frame/zk-verifier/src/application/use_cases/: mod.rs  register_vk.rs  remove_vk.rs  set_active_version.rs  verify_proof.rs
frame/zk-verifier/src/domain/: errors.rs  mod.rs  repositories.rs
frame/zk-verifier/src/infrastructure/: adapters.rs  mappers.rs  mod.rs
frame/zk-verifier/src/presentation/: extrinsics.rs  mod.rs
frame/zk-verifier/src/tests/: mod.rs
primitives/encrypted-memo/: Cargo.toml  README.md
primitives/encrypted-memo/src/: lib.rs
primitives/encrypted-memo/src/application/: disclosure.rs  mod.rs  prover.rs
primitives/encrypted-memo/src/core/: constants.rs  error.rs  mod.rs  types.rs
primitives/encrypted-memo/src/crypto/: encryption.rs  key_derivation.rs  mod.rs  validation.rs
primitives/encrypted-memo/src/domain/: mod.rs
primitives/encrypted-memo/src/infrastructure/: mod.rs
primitives/encrypted-memo/src/models/: keyset.rs  mod.rs
primitives/encrypted-memo/tests/: encryption_tests.rs  key_derivation_tests.rs  keyset_tests.rs
primitives/zk-circuits/: Cargo.toml  README.md
primitives/zk-circuits/src/: lib.rs
primitives/zk-circuits/src/application/: mod.rs
primitives/zk-circuits/src/circuits/: mod.rs  note.rs  transfer.rs
primitives/zk-circuits/src/domain/: mod.rs  value_objects.rs
primitives/zk-circuits/src/gadgets/: commitment.rs  merkle.rs  mod.rs  poseidon.rs
primitives/zk-circuits/src/infrastructure/: mod.rs  native_crypto.rs
primitives/zk-core/: Cargo.toml  README.md
primitives/zk-core/src/: lib.rs
primitives/zk-core/src/application/: mod.rs
primitives/zk-core/src/domain/: constants.rs  mod.rs
primitives/zk-core/src/infrastructure/: host_interface.rs  mod.rs
primitives/zk-primitives/: Cargo.toml  README.md
primitives/zk-primitives/src/: lib.rs
primitives/zk-primitives/src/core/: constants.rs  error.rs  mod.rs  types.rs
primitives/zk-primitives/src/crypto/: commitment.rs  hash.rs  merkle.rs  mod.rs  poseidon.rs
primitives/zk-primitives/src/models/: mod.rs  note.rs
primitives/zk-primitives/tests/: commitment_tests.rs  core_constants_tests.rs  core_error_tests.rs  core_types_tests.rs  hash_tests.rs  integration_tests.rs  merkle_tests.rs  note_tests.rs
primitives/zk-verifier/: Cargo.toml  README.md
primitives/zk-verifier/src/: lib.rs
primitives/zk-verifier/src/application/: mod.rs
primitives/zk-verifier/src/compat/: mod.rs  snarkjs.rs
primitives/zk-verifier/src/core/: constants.rs  error.rs  mod.rs  types.rs
primitives/zk-verifier/src/crypto/: groth16.rs  mod.rs  utils.rs
primitives/zk-verifier/src/domain/: mod.rs
primitives/zk-verifier/src/infrastructure/: mod.rs
primitives/zk-verifier/src/vk/: mod.rs  registry.rs  transfer.rs  unshield.rs
primitives/zk-verifier/tests/: crypto_tests.rs  snarkjs_compat_tests.rs  vk_tests.rs
(+346 files in other folders)
