[package]
name = "fc-rpc-v2"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum RPC (web3) compatibility layer for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sc-client-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, features = ["default"] }
sp-runtime = { workspace = true, features = ["default"] }

# Parity
scale-codec = { workspace = true, features = ["derive"] }

# JSON-RPC
jsonrpsee = { workspace = true, features = ["server", "macros"] }

# Utilities
hex = { workspace = true }
log = { workspace = true }
serde = { workspace = true }

# Orbinum Primitives
pallet-shielded-pool = { workspace = true, features = ["std"] }
