[package]
name = "orbinum-encrypted-memo"
version = "0.3.0"
authors = ["Orbinum Network <dev@orbinum.net>"]
edition = "2021"
license = "Apache-2.0 OR GPL-3.0-or-later"
description = "Encrypted memo primitives for Orbinum shielded transactions"
repository = "https://github.com/orbinum/node"
homepage = "https://orbinum.network"
keywords = ["cryptography", "encryption", "privacy", "blockchain", "orbinum"]
categories = ["cryptography", "no-std"]

[dependencies]
# Core cryptography
chacha20poly1305 = { version = "0.10", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

# Serialization
hex = { version = "0.4", default-features = false, features = ["alloc"], optional = true }
parity-scale-codec = { version = "3.6", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1.0", default-features = false, optional = true }

# Random number generation (encrypt feature)
rand = { version = "0.8", default-features = false, features = ["std_rng", "getrandom"], optional = true }

[dev-dependencies]
getrandom = { version = "0.2", default-features = false, features = ["js"] }
hex = "0.4"
rand = { version = "0.8", default-features = false, features = ["getrandom"] }

[features]
default = ["std"]

std = [
	"chacha20poly1305/std",
	"sha2/std",
	"parity-scale-codec?/std",
	"scale-info?/std",
	"rand?/std",
	"encrypt",
]

# Encryption with random nonce generation
encrypt = ["rand"]
