[package]
name = "orbinum-zk-circuits"
version = "0.2.0"
authors = ["Orbinum Network <dev@orbinum.net>"]
edition = "2021"
license = "Apache-2.0 OR GPL-3.0-or-later"
description = "Zero-Knowledge R1CS circuits and gadgets for Orbinum Network"
repository = "https://github.com/orbinum/node"
homepage = "https://orbinum.network"
readme = "README.md"
keywords = ["cryptography", "zero-knowledge", "circuits", "r1cs", "orbinum"]
categories = ["cryptography", "no-std"]

[dependencies]
# ZK Primitives (native crypto)
orbinum-zk-core = { path = "../zk-core", default-features = false }

# Arkworks cryptography stack
# Version 0.5.0 to match zk-core (required for light-poseidon-nostd compatibility)
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }

# Arkworks constraint system (R1CS)
# Must match ark-bn254 version for API compatibility
ark-r1cs-std = { version = "0.5.0", default-features = false }
ark-relations = { version = "0.5.0", default-features = false }

[features]
default = ["std"]
std = [
	"orbinum-zk-core/std",
	"ark-bn254/std",
	"ark-r1cs-std/std",
	"ark-relations/std",
]
