[package]
name = "fp-zk-primitives"
version = "0.1.0"
authors = ["Orbinum Network <dev@orbinum.net>"]
edition = "2021"
license = "Apache-2.0 OR GPL-3.0"
description = "Native cryptographic primitives for Zero-Knowledge proofs in Orbinum Network"
repository = "https://github.com/orbinum/node"
homepage = "https://orbinum.network"
readme = "README.md"
keywords = ["cryptography", "orbinum", "poseidon", "zk-snark", "blockchain"]
categories = ["cryptography", "no-std"]

[dependencies]
# Arkworks (minimal - no R1CS)
ark-bn254 = { version = "0.4", default-features = false }
ark-ff = { version = "0.4", default-features = false }
ark-serialize = { version = "0.4", default-features = false }
ark-std = { version = "0.4", default-features = false }

# Poseidon hash (circomlib compatible)
light-poseidon = { version = "0.2.0", default-features = false }

# Substrate primitives (optional for runtime integration)
sp-core = { version = "37", default-features = false, optional = true }
sp-std = { version = "14", default-features = false, optional = true }

# Codec (optional for runtime integration)
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

[dev-dependencies]
ark-std = { version = "0.4", features = ["std"] }

[features]
default = ["std"]
std = [
	"ark-bn254/std",
	"ark-ff/std",
	"ark-serialize/std",
	"ark-std/std",
	"substrate",
]
substrate = [
	"sp-std",
	"sp-core",
	"parity-scale-codec",
	"scale-info",
	"sp-std/std",
	"sp-core/std",
	"parity-scale-codec/std",
	"scale-info/std",
]
