[package]
name = "orbinum-zk-verifier"
version = "0.2.0"
authors = ["Orbinum Network <dev@orbinum.net>"]
edition = "2021"
license = "Apache-2.0 OR GPL-3.0-or-later"
description = "Zero-Knowledge proof verification - Groth16 on BN254 for Orbinum Network"
repository = "https://github.com/orbinum/node"
homepage = "https://orbinum.network"
keywords = ["cryptography", "zero-knowledge", "groth16", "blockchain", "orbinum"]
categories = ["cryptography", "no-std"]

[lib]
name = "orbinum_zk_verifier"
path = "src/lib.rs"

[dependencies]
# Arkworks 0.5.0 for consistency with other Orbinum ZK primitives
ark-bn254 = { version = "0.5.0", default-features = false, features = ["curve"] }
ark-ec = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-serialize = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false }

# Substrate primitives (optional for runtime integration)
ark-scale = { version = "0.0.11", default-features = false, features = ["hazmat"] }
sp-crypto-ec-utils = { version = "0.19", default-features = false, optional = true }
sp-runtime = { version = "39", default-features = false, optional = true }

# ZK Primitives (usar version local para evitar conflictos de dependencias)
orbinum-zk-core = { path = "../zk-core", default-features = false }

# Codec
parity-scale-codec = { version = "3.7.5", default-features = false, features = ["derive"], optional = true }
scale-info = { version = "2.11", default-features = false, features = ["derive"], optional = true }

# For parsing verification key from JSON (std only)
num-bigint = { version = "0.4", default-features = false, optional = true }

[dev-dependencies]
ark-relations = { version = "0.5.0", default-features = false }
ark-snark = { version = "0.5.0", default-features = false }
ark-std = { version = "0.5.0", default-features = false, features = ["std"] }

[features]
default = ["std"]

# Standard library support (enables JSON parsing, BigInt, etc.)
std = [
	"ark-bn254/std",
	"ark-ec/std",
	"ark-ff/std",
	"ark-groth16/std",
	"ark-serialize/std",
	"ark-std/std",
	"num-bigint",
	"orbinum-zk-core/std",
]

# Substrate runtime integration (requires sp-*)
substrate = [
	"sp-runtime",
	"sp-crypto-ec-utils",
	"parity-scale-codec",
	"scale-info",
]
