[package]
name = "pallet-account-mapping-rpc"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"

[dependencies]
hex = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros", "client"] }
pallet-account-mapping-runtime-api = { path = "../runtime-api" }
serde = { workspace = true, features = ["derive"] }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
