[package]
name = "pallet-account-mapping-runtime-api"
version = "0.2.0"
authors = { workspace = true }
edition = { workspace = true }
license = "Apache-2.0"

[dependencies]
pallet-account-mapping = { path = "../", default-features = false }
scale-codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false, features = ["derive"] }
serde = { workspace = true, default-features = false, features = ["derive", "alloc"] }
sp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	"sp-api/std",
	"sp-core/std",
	"sp-runtime/std",
	"pallet-account-mapping/std",
]
